--- a/MyBlogServerSide/MyBlogServerSide.csproj
+++ b/MyBlogServerSide/MyBlogServerSide.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyBlog.Data\MyBlog.Data.csproj" />
+  </ItemGroup>
+
 </Project>
