--- a/MyBlogServerSide/MyBlogServerSide.csproj
+++ b/MyBlogServerSide/MyBlogServerSide.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.26.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
