--- a/MyBlogWebAssembly/Server/appsettings.json
+++ b/MyBlogWebAssembly/Server/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyBlogDB": "Data Source = ../MyBlog.db"
+  },
+  /*<IdentityServer>*/
+  "IdentityServer": {
+    "Clients": {
+      "MyBlogWebAssembly.Client": {
+        "Profile": "IdentityServerSPA"
+      }
+    }
+  }
+  /*<IdentityServer>*/
 }
