--- a/TmtsChecker/TmtsChecker.csproj
+++ b/TmtsChecker/TmtsChecker.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.1" />	 
     <PackageReference Include="MudBlazor" Version="6.0.4" />
   </ItemGroup>
 
