--- a/TmtsChecker/appsettings.json
+++ b/TmtsChecker/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TmtsDB": "Data Source = ./TmtsDB.db"
+  }
 }
