--- a/HashWorkerBlazor/appsettings.json
+++ b/HashWorkerBlazor/appsettings.json
@@ -7,10 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HashWorkerDB": "Data Source = ./HashWorkerDB.db"
+    //"HashWorkerDB": "Data Source = ./HashWorkerDB.db;"
+    //"HashWorkerDB": "Server=10.0.75.1;Database=Sample;User ID=sa;Password=xxxx;Trusted_Connection=True;Integrated Security=False;"
+    "HashWorkerDB": "Server=(localdb)\\mssqllocaldb;Database=HashWorkerDB;Trusted_Connection=True;"
   },
   "AppVals": {
-    "TransPath": "C:/Users/user/Downloads",
+    "TransPath": "C:/temp",
     "ZipPwd": "ForkN58UsbP@ssW0rd"
   }
 }
